Ajout de la premiere form: Menu

--- a/IdleGame.csproj
+++ b/IdleGame.csproj
@@ -46,27 +46,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="FormMenu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormMenu.Designer.cs">
+      <DependentUpon>FormMenu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="IdleGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormMenu.resx">
+      <DependentUpon>FormMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -75,6 +78,51 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\cancel.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\cancelhover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\copy.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\dice.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\dicehover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\icon2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\ok.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\okhover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\ss.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\ss2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\underscore.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\underscore2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\xx.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\xx2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
