Ajout de la form creation perso

--- a/IdleGame.csproj
+++ b/IdleGame.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormCreation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCreation.Designer.cs">
+      <DependentUpon>FormCreation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Blank.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +66,9 @@
     </Compile>
     <Compile Include="IdleGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormCreation.resx">
+      <DependentUpon>FormCreation.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Blank.resx">
       <DependentUpon>Blank.cs</DependentUpon>
     </EmbeddedResource>
