--- a/IdleGame.csproj
+++ b/IdleGame.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExecIdleGame.cs" />
+    <Compile Include="FormChoixEquipement.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormChoixEquipement.Designer.cs">
+      <DependentUpon>FormChoixEquipement.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormJeu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,9 @@
     <Compile Include="IdleGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQL.cs" />
+    <EmbeddedResource Include="FormChoixEquipement.resx">
+      <DependentUpon>FormChoixEquipement.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormJeu.resx">
       <DependentUpon>FormJeu.cs</DependentUpon>
     </EmbeddedResource>
