--- a/IdleGame.csproj
+++ b/IdleGame.csproj
@@ -471,5 +471,8 @@
   <ItemGroup>
     <None Include="images\guerisseur.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="images\footprint.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
