--- a/IdleGame.csproj
+++ b/IdleGame.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExecIdleGame.cs" />
+    <Compile Include="FormChoixStat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormChoixStat.Designer.cs">
+      <DependentUpon>FormChoixStat.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormChoixEquipement.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,9 @@
     <Compile Include="IdleGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQL.cs" />
+    <EmbeddedResource Include="FormChoixStat.resx">
+      <DependentUpon>FormChoixStat.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormChoixEquipement.resx">
       <DependentUpon>FormChoixEquipement.cs</DependentUpon>
     </EmbeddedResource>
@@ -473,6 +482,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="images\footprint.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\bouton_charisme.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\bouton_constitution.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\bouton_dexterite.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\bouton_force.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\bouton_intelligence.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\bouton_sagesse.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\syringe.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
